Cleaned up the overview scene and added being able to edit the title